test: add tests for Add-Reads and SplashScreen-Image manifest attributes
Adds comprehensive test coverage for the new manifest attribute features:

- testReadingAddReads: Verifies Add-Reads parsing and --add-reads flag generation
- testReadingSplashScreenImage: Verifies image extraction from jar and -splash flag
- testMissingSplashScreenImage: Verifies graceful handling when image is missing

Tests validate:
- Manifest attributes are correctly imported from jars
- JVM flags are correctly generated from manifest values
- Splash screen images are extracted to cache with proper naming
- Missing splash images generate warnings but don't fail the build

Co-Authored-By: Claude Sonnet 4.5 <noreply@anthropic.com>